# public-tauri

./: .gitignore  LICENSE.md  README.md  auto-imports.d.ts  components.d.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.plugins.json  vite.config.ts
.changeset/: bright-pugs-publish.md  config.json  twelve-ideas-make.md
.github/workflows/: build-raycast-store.yml  build-store.yml  build.yml  deploy-site.yml  publish-npm.yml  release.yml
docs/: README.md  api-reference.md  build-and-publish.md  commands.md  components.md  dev-log.md  dev-plugins.md  development.md  getting-started.md  index.md  lifecycle.md  manifest.md  modes.md  plugin-index.md  preferences.md  server-side.md  store.md  webdriver-e2e-input.md
docs-app/: development.md  webdriver-e2e-input.md  webdriver-e2e.md
docs/.vitepress/: config.ts
e2e/: debug-page.cjs  webdriver-calc-history.ts  webdriver-confetti-plugin.ts  webdriver-google-chrome-plugin.ts  webdriver-raycast-flush-dns-plugin.ts  webdriver-raycast-screenshot-plugin.ts  webdriver-raycast-smoke-plugin.ts  webdriver-raycast-store.ts  webdriver-screenshot.ts  webdriver-search-plugin.ts  webdriver-shell-plugin.ts  webdriver-snippets-plugin.ts
plugins/ai/: package.json  rollup.config.mjs
plugins/applescript/: package.json  rollup.config.mjs
plugins/calculator/: package.json  rollup.config.mjs  tsdown.config.ts
plugins/clipboard/: package.json  rollup.config.mjs  tsdown.config.ts
plugins/confetti/: package.json  rollup.config.mjs
plugins/emoji/: package.json  rollup.config.mjs
plugins/launcher/: package.json  rollup.config.mjs  tsconfig.json  tsdown.config.ts
plugins/magic/: package.json  rollup.config.mjs
plugins/mdn/: package.json  rollup.config.mjs
plugins/qrcode/: .gitignore  package.json  rollup.config.mjs  tsconfig.json  tsdown.config.ts
plugins/script-commands/: README.md  auto-imports.d.ts  components.d.ts  package.json  vite.config.ts
plugins/settings/: .gitignore  package.json  rollup.config.mjs
plugins/snippets/: README.md  auto-imports.d.ts  components.d.ts  env.d.ts  index.html  package.json  rollup.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
plugins/transform/: package.json  rollup.config.mjs  tsdown.config.ts
plugins/translate/: binding.gyp  package.json  rollup.config.mjs  tsdown.config.ts
plugins/v2ex/: package.json  rollup.config.mjs
public/: plugin.schema.json
public/clipboard/: package.json
scripts/: build-raycast-store.ts  build-store.ts  prepare-nodejs.ts  raycast-to-public-plugin.ts  test-raycast-download.sh  verify-publish-packages.ts  verify-site.mjs  webdriver-google-chrome-plugin.ts  webdriver-search-plugin.ts  webdriver-shell-plugin.ts  webdriver-smoke.ts  webdriver-snippets-plugin.ts
src/: App.vue  const.ts  main.ts  module.d.ts  style.css  vite-env.d.ts
src-node/: binding.gyp  mcp.json  package.json  tsconfig.json  tsdown.config.ts
src-node/lib/: addon.mm  frontmostApplication.mm  getIconForFile.h  getIconForFile.mm  pinyin.mm
src-node/src/: index.ts  socket.io.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/plugins/double-tap-shortcut/: Cargo.toml  build.rs
src-tauri/plugins/double-tap-shortcut/guest-js/: package.json  tsconfig.json
src-tauri/plugins/double-tap-shortcut/guest-js/src/: index.ts
src-tauri/plugins/double-tap-shortcut/permissions/: default.toml
src-tauri/plugins/double-tap-shortcut/permissions/autogenerated/: reference.md
src-tauri/plugins/double-tap-shortcut/permissions/schemas/: schema.json
src-tauri/plugins/double-tap-shortcut/src/: lib.rs
src-tauri/plugins/enigo/: Cargo.toml  build.rs
src-tauri/plugins/enigo/permissions/autogenerated/: reference.md
src-tauri/plugins/enigo/permissions/autogenerated/commands/: enigo.toml
src-tauri/plugins/enigo/permissions/schemas/: schema.json
src-tauri/plugins/enigo/src/: lib.rs
src-tauri/plugins/enigo/src/commands/: mod.rs
src-tauri/plugins/paste/: Cargo.toml  build.rs
src-tauri/plugins/paste/permissions/autogenerated/: reference.md
src-tauri/plugins/paste/permissions/schemas/: schema.json
src-tauri/plugins/paste/src/: lib.rs
src-tauri/plugins/paste/src/commands/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/: command.rs  commands.rs  lib.rs  main.rs  panel.rs  window.rs
src-tauri/src/commands/: monitor.rs  permissions.rs  system_utils.rs
src/assets/: base.css
src/bridge/: node-tauri-rpc.ts
src/components/: ActionBar.vue  ActionDialog.vue  ActionList.vue  ActionPanel.vue  AppToast.vue  CollapsedContainer.vue  HotkeyRecorder.vue  InputBar.vue  KeyboardKey.vue  LoadingBar.vue  LoadingIcon.vue  MCPServerEditor.vue  MarkdownRenderer.vue  PublicLayout.vue  ResultItem.vue  ResultItemPreview.vue  ResultView.vue  RoutePage.vue  ShortcutsKey.vue  ShortcutsRecorder.vue  VirtualList.vue
src/composables/: useAppActionBar.ts
src/keyboard/: keyboardLayer.ts
src/mock/: store.ts
src/plugin/: builtin.ts  const.ts  constants.ts  devPluginHotReload.ts  frontend-api-registry.ts  manager.ts  plugin.schema.json  runtime.ts  schema.ts  service.ts  storage.ts  store.ts  utils.ts  wujie-creator.ts  wujie-pool.ts
src/router/: hooks.ts  index.ts
src/services/: index.ts  manager.ts  mcp.ts  plugin.ts  raycast-store.ts  scaffold.ts  settings.ts  store.ts
src/types/: index.d.ts  index.ts  plugin.d.ts  plugin.ts  raycast-store.ts  store.ts
src/utils/: app-action-bar.ts  deep-link.ts  draggable.ts  events.ts  feedback.ts  index.ts  keyboard.ts  raycast-plugin-package-name.ts  server.ts  shortcut.ts  shortcuts.ts  tray.ts
src/views/: AIChatView.vue  AboutView.vue  CreateLinkView.vue  CreatePluginView.vue  CreateSnippetView.vue  DevPluginsView.vue  HomeView.vue  ListView.vue  MCPConfigView.vue  PluginCustomView.vue  PluginPrfsView.vue  PluginView.vue  PluginWujieView.vue  RaycastStoreView.vue  SettingsView.vue  StoreDetailView.vue  (+3 more)
store/: index.json
(+133 files in other folders)
