[workspace]
members = ["plugins/double-tap-shortcut"]
resolver = "2"

[package]
name = "public-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "public_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
png = "0.18.0"
serde = "1.0.219"
tauri = { version = "2.8.4", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-ico", "image-png", "devtools"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
xcap = "0.7.0"
tokio = { version = "1", features = ["time"] }

# 内建 double-tap-shortcut 插件 (workspace member)
tauri-plugin-double-tap-shortcut = { path = "plugins/double-tap-shortcut" }
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-opener = "2"
tauri-plugin-shellx = "2.0.16"
tauri-plugin-process = "2"
tauri-plugin-upload = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.0"
