[workspace]
members = ["plugins/double-tap-shortcut"]
resolver = "2"

[package]
name = "public-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable with: `pnpm tauri:dev` or `cargo tauri dev --features webdriver`
# Omit in release builds (`pnpm tauri build`) so automation is not linked.
default = []
webdriver = ["dep:tauri-plugin-webdriver"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "public_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
png = "0.18.0"
serde = "1.0.219"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-ico", "image-png", "devtools"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-clipboard = "2"
# `watch`：注册 fs `watch` / `unwatch` 命令，供 devPluginHotReload 使用
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
xcap = "0.7.0"
tokio = { version = "1", features = ["time"] }

# 内建 double-tap-shortcut 插件 (workspace member)
tauri-plugin-double-tap-shortcut = { path = "plugins/double-tap-shortcut" }
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-opener = "2"
tauri-plugin-shellx = "2"
tauri-plugin-process = "2"
tauri-plugin-upload = "2"
tauri-plugin-webdriver = { version = "0.2", optional = true }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde_json = "1.0.149"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSBundle", "NSString", "NSURL"] }
