[package]
name = "tauri-plugin-double-tap-shortcut"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for double-tap modifier key global shortcuts"
links = "tauri-plugin-double-tap-shortcut"

[lib]
name = "tauri_plugin_double_tap_shortcut"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
uiohook-rs = "0.2.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
