[package]
name = "tauri-plugin-eco-paste"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-paste"


[build-dependencies]
tauri-plugin = "2.3.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"
objc = ">=0.2, <1"
objc2 = "0.6.1"
objc2-foundation = "0.3.1"

[target."cfg(target_os = \"windows\")".dependencies]
winapi = { version = ">=0.3, <1", features = ["winuser", "windef"] }
enigo = ">=0.2, <1"

[target."cfg(target_os = \"linux\")".dependencies]
x11 = "2"
rdev = ">=0.5, <1"

[features]
cargo-clippy = []

[dependencies]
tauri = "2.7.0"
